crates/iota/src/client_ptb/snapshots/iota__client_ptb__lexer__tests__slash_comments_chained.snap
---
source: crates/iota/src/client_ptb/lexer.rs
assertion_line: 622
expression: lex(tokens)
---
[
    Spanned {
        span: Span {
            start: 36,
            end: 44,
        },
        value: Lexeme(
            Command,
            "assign",
        ),
    },
    Spanned {
        span: Span {
            start: 45,
            end: 51,
        },
        value: Lexeme(
            Ident,
            "result",
        ),
    },
    Spanned {
        span: Span {
            start: 51,
            end: 51,
        },
        value: Lexeme(
            Eof,
            "",
        ),
    },
]
