crates/iota/src/client_ptb/snapshots/iota__client_ptb__lexer__tests__slash_comments_empty_comment.snap
---
source: crates/iota/src/client_ptb/lexer.rs
assertion_line: 679
expression: lex(tokens)
---
[
    Spanned {
        span: Span {
            start: 24,
            end: 30,
        },
        value: Lexeme(
            Command,
            "real",
        ),
    },
    Spanned {
        span: Span {
            start: 30,
            end: 30,
        },
        value: Lexeme(
            Eof,
            "",
        ),
    },
]
