crates/iota/src/client_ptb/snapshots/iota__client_ptb__lexer__tests__slash_comments_inline_with_text.snap
---
source: crates/iota/src/client_ptb/lexer.rs
assertion_line: 656
expression: lex(tokens)
---
[
    Spanned {
        span: Span {
            start: 20,
            end: 25,
        },
        value: Lexeme(
            Command,
            "cmd",
        ),
    },
    Spanned {
        span: Span {
            start: 26,
            end: 29,
        },
        value: Lexeme(
            Ident,
            "arg",
        ),
    },
    Spanned {
        span: Span {
            start: 29,
            end: 29,
        },
        value: Lexeme(
            Eof,
            "",
        ),
    },
]
