crates/iota/src/client_ptb/snapshots/iota__client_ptb__lexer__tests__slash_comments_only_comments.snap
---
source: crates/iota/src/client_ptb/lexer.rs
assertion_line: 665
expression: lex(tokens)
---
[
    Spanned {
        span: Span {
            start: 17,
            end: 17,
        },
        value: Lexeme(
            Eof,
            "",
        ),
    },
]
