crates/iota/src/client_ptb/snapshots/iota__client_ptb__lexer__tests__slash_comments_text_then_comment_then_command.snap
---
source: crates/iota/src/client_ptb/lexer.rs
assertion_line: 632
expression: lex(tokens)
---
[
    Spanned {
        span: Span {
            start: 46,
            end: 54,
        },
        value: Lexeme(
            Command,
            "assign",
        ),
    },
    Spanned {
        span: Span {
            start: 55,
            end: 61,
        },
        value: Lexeme(
            Ident,
            "result",
        ),
    },
    Spanned {
        span: Span {
            start: 61,
            end: 61,
        },
        value: Lexeme(
            Eof,
            "",
        ),
    },
]
